--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.app {
+  display:flex;
+  height: 100vh;
+  background-color: rgb(251, 251, 250);
+  flex-direction: row;
+  justify-content:center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0;
+  width: 100vw
+ 
 }
 
-.App-link {
-  color: #61dafb;
-}
+.Main__container {
+  margin: 0;
+  display:flex;
+  flex-direction: column;
+  flex: 0.9;
+ background-color: #ecedf3;
+  padding: 0;
+ 
+ align-items: center;
+ /* display: grid; */
+ /* justify-content: space-between; */
+ height: 100vh;
+ /* position :relative; */
+ width: 100%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
