--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,9 +1,8 @@
-.sidebar__main{
-    margin-top: 0;
-    
-    display:flex;
-    flex: 0.1;
-    background-color: #e4e3e3;
-    height: 100vh;
- 
+.sidebar__main {
+  margin-top: 0;
+
+  display: flex;
+  flex: 0.1;
+  background-color: #e4e3e3;
+  /* height: 100vh; */
 }
